Refactor authentication and registration process; implement error handling and update CORS configuration